# budget-app

./: .gitignore  pyproject.toml  tester.py
Budget-app/: bun.lockb  package.json
Budget-app/src/: App.tsx
app/: auth.py  main.py  settings.py
app/routers/bills/: bills.py  models.py
app/routers/budgets/: budgets.py  models.py
app/routers/expenses/: expenses.py  models.py
app/routers/wishlists/: models.py  wishlists.py
app/utilities/: clients.py  log.py
frontend/: bun.lockb  package.json
